feat(sections): multi-column content

--- a/sections/multi-column-content.html
+++ b/sections/multi-column-content.html
@@ -7,7 +7,7 @@
 -->
 {% dnd_section
   background_color={{ context.background_color || '#f8fafc' }},
-  vertical_alignment='MIDDLE'
+  vertical_alignment='TOP'
 %}
   {% dnd_column
     offset=0,
@@ -30,7 +30,7 @@
     {% dnd_row %}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.column_one_content || '<h3>Feature one</h3><p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>' }}
+        html={{ context.column_one_content || '<div style="text-align: center;"><h4>Protect wetlands.</h4><p>Wetlands act as natural buffers for coastal areas during rainstorms and hurricanes. They absorb precipitation and storm surge waters. Find out about wetland restoration activities in your area and get involved.</p></div>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
@@ -56,7 +56,7 @@
     {% dnd_row %}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.column_two_content || '<h3>Feature two</h3><p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>' }}
+        html={{ context.column_two_content || '<div style="text-align: center;"><h4>Reduce energy use.</h4><p>Reducing your energy usage is good for your wallet and the environment. Turn off your lights and appliances when not in use and replace them with more energy efficient varieties. Adjust your thermostat to reduce AC and heat use.</p></div>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
@@ -82,7 +82,7 @@
     {% dnd_row %}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.column_three_content || '<h3>Feature three</h3><p>Use text and images to tell your company’s story. Explain what makes your product or service extraordinary.</p>' }}
+        html={{ context.column_three_content || '<div style="text-align: center;"><h4>Preserve plants and trees.</h4><p>Plants clean the air every day and soak up rain. Reduce paper use to prevent trees from being cut down. Set all computers and printers to double-sided printing and reuse one-sided copies as scrap paper.</p></div>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
