--- a/sections/multi-column-content.html
+++ b/sections/multi-column-content.html
@@ -3,13 +3,74 @@
   label: Multi-column content
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/multi-column-content.png
-  description: "Full size background color section separated in three columns with with an image and text in each."
+  description: "Full-width three column layout with a heading."
 -->
-{% dnd_section
-  background_color={{ context.background_color || '#f8fafc' }},
-  vertical_alignment='TOP'
-%}
-  {% dnd_column
+{% dnd_section 
+vertical_alignment='TOP',
+background_image={
+  'backgroundPosition': 'BOTTOM_CENTER',
+  'backgroundSize': 'contain',
+  'imageUrl': context.background_image || get_asset_url('../images/erda-estremera-aSFZKeZiHPc-unsplash-2.jpg')
+},
+max_width={{ context.max_width || 1200 }},
+padding={
+  'default': {
+    'top': 20,
+    'right': 20,
+    'bottom': 450,
+    'left': 20
+  },
+  'mobile': {
+    'top': 20,
+    'right': 20,
+    'bottom': 200,
+    'left': 20
+  }
+} %}
+      
+        {% dnd_column
+        offset=0,
+        width=12
+        %}
+        {% dnd_row %}
+            {% dnd_module
+                path='@hubspot/rich_text',
+                html={{ context.column_one_content || '<div style="text-align: center;"><h2>Our Approach</h2><h4>There are three ways to reduce rising sea levels:</h4></div>' }}
+            %}
+            {% end_dnd_module %}
+            {% end_dnd_row %}
+        {% dnd_row padding={
+        'default': {
+          'top': 20,
+          'right': 20,
+          'bottom': 200,
+          'left': 20
+        },
+        'mobile': {
+          'top': 20,
+          'right': 20,
+          'bottom': 200,
+          'left': 20
+        }
+      } %}
+        {% dnd_module path='../modules/vertical-bar.module' %}
+        {% end_dnd_module %}
+        {% end_dnd_row %}
+        {% dnd_row padding={
+        'default': {
+          'top': 0,
+          'right': 0,
+          'bottom': -400,
+          'left': 0
+        },
+        'mobile': {
+          'top': 0,
+          'right': 0,
+          'bottom': -400,
+          'left': 0
+        }
+      }%}
+            {% dnd_column
     offset=0,
     width=4
   %}
@@ -19,8 +80,8 @@
         img={
           'alt': context.column_one_image_alt || 'Stock placeholder image with grayscale geometrical mountain landscape',
           'loading': context.column_one_image_loading || 'lazy',
-          'max_height': context.column_one_image_height || 451,
-          'max_width': context.column_one_image_width || 605,
+          'max_height': context.column_one_image_height || 251,
+          'max_width': context.column_one_image_width || 305,
           'size_type': 'auto_custom_max',
           'src': context.column_one_image || get_asset_url('../images/grayscale-mountain.png')
         }
@@ -45,8 +106,8 @@
         img={
           'alt': context.column_two_image_alt || 'Stock placeholder image with grayscale geometrical mountain landscape',
           'loading': context.column_two_image_loading || 'lazy',
-          'max_height': context.column_two_image_height || 451,
-          'max_width': context.column_two_image_width || 605,
+          'max_height': context.column_two_image_height || 251,
+          'max_width': context.column_two_image_width || 305,
           'size_type': 'auto_custom_max',
           'src': context.column_two_image || get_asset_url('../images/grayscale-mountain.png')
         }
@@ -71,8 +132,8 @@
         img={
           'alt': context.column_three_image_alt || 'Stock placeholder image with grayscale geometrical mountain landscape',
           'loading': context.column_three_image_loading || 'lazy',
-          'max_height': context.column_three_image_height || 451,
-          'max_width': context.column_three_image_width || 605,
+          'max_height': context.column_three_image_height || 251,
+          'max_width': context.column_three_image_width || 305,
           'size_type': 'auto_custom_max',
           'src': context.column_three_image || get_asset_url('../images/grayscale-mountain.png')
         }
@@ -87,4 +148,6 @@
       {% end_dnd_module %}
     {% end_dnd_row %}
   {% end_dnd_column %}
+            {% end_dnd_row %}
+        {% end_dnd_column %}
 {% end_dnd_section %}
