--- a/sections/call-to-action.html
+++ b/sections/call-to-action.html
@@ -5,9 +5,10 @@
   screenshotPath: ../images/section-previews/call-to-action.png
   description: "Full-width three column layout."
 -->
-{% dnd_section max_width={{ context.max_width || 1400 }} %}
+{% dnd_section  max_width={{ context.max_width || 1400 }} 
+%}
   {% dnd_column %}
-    {% dnd_row class="home-hero" %}
+    {% dnd_row  %}
       {% dnd_module path='../modules/three-column-grid.module' %}
       {% end_dnd_module %}
     {% end_dnd_row %}
