--- a/sections/call-to-action.html
+++ b/sections/call-to-action.html
@@ -5,7 +5,7 @@
   screenshotPath: ../images/section-previews/call-to-action.png
   description: "Full-width three column layout."
 -->
-{% dnd_section  id ="call-to-action" max_width={{ context.max_width || 1400 }}, padding={
+{% dnd_section  class='call-to-action' padding={
 'default': {
   'top': 0,
   'right': 0,
