--- a/sections/donate.html
+++ b/sections/donate.html
@@ -26,7 +26,7 @@ max_width={{ context.max_width || 1200 }} %}
             {% end_dnd_module %}
             {% end_dnd_row %}
         {% dnd_row %}
-      {% dnd_module path='../modules/button-row.module' %}
+      {% dnd_module path='../modules/action-center.module' %}
       {% end_dnd_module %}
             {% end_dnd_row %}
         {% end_dnd_column %}
