fix(modules): update labels, default content, & mobile styles

--- a/modules/vertical-bar.module/module.html
+++ b/modules/vertical-bar.module/module.html
@@ -1,1 +1,3 @@
-<div class="vertical-line" style="border-left: 1px solid {{ module.bar_color.color }};"></div>
+<div class="vertical-line-container">
+    <div class="vertical-line" style="border-left: 1px solid {{ module.bar_color.color }};"></div>
+</div>
