--- a/modules/three-column-grid.module/module.html
+++ b/modules/three-column-grid.module/module.html
@@ -9,7 +9,7 @@
 	{% if module.column_1.link.open_in_new_tab %}target="_blank"{% endif %}
 	{% if module.column_1.link.rel %}rel="{{ module.column_1.link.rel }}"{% endif %}
 	>
-	    <div class="column" style="background-color: {{ module.column_1.background_color.color }}; padding: 20px 10px; ">
+	    <div class="column" style="background-color: {{ module.column_1.background_color.color }};">
       <h4 style="text-align: center; color: #fff;">{{ module.column_1.text }}</h4>
     </div>
 </a>
@@ -22,7 +22,7 @@
 	{% if module.column_2.link.open_in_new_tab %}target="_blank"{% endif %}
 	{% if module.column_2.link.rel %}rel="{{ module.column_2.link.rel }}"{% endif %}
 	>
-	    <div class="column" style="background-color: {{ module.column_2.background_color.color }}; padding: 20px 10px;  ">
+	    <div class="column" style="background-color: {{ module.column_2.background_color.color }};">
       <h4 style="text-align: center; color: #fff;">{{ module.column_2.text }}</h4>
     </div>
 </a>
@@ -35,7 +35,7 @@
 	{% if module.column_3.link.open_in_new_tab %}target="_blank"{% endif %}
 	{% if module.column_3.link.rel %}rel="{{ module.column_3.link.rel }}"{% endif %}
 	>
-	    <div class="column" style="background-color: {{ module.column_3.background_color.color }}; padding: 20px 10px;  ">
+	    <div class="column" style="background-color: {{ module.column_3.background_color.color }};">
       <h4 style="text-align: center; color: #fff;">{{ module.column_3.text }}</h4>
     </div>
 </a>
