fix(sections): adjust width & padding

--- a/sections/multi-column-content.html
+++ b/sections/multi-column-content.html
@@ -39,37 +39,11 @@ padding={
             %}
             {% end_dnd_module %}
             {% end_dnd_row %}
-        {% dnd_row padding={
-        'default': {
-          'top': 20,
-          'right': 20,
-          'bottom': 200,
-          'left': 20
-        },
-        'mobile': {
-          'top': 20,
-          'right': 20,
-          'bottom': 200,
-          'left': 20
-        }
-      } %}
+        {% dnd_row %}
         {% dnd_module path='../modules/vertical-bar.module' %}
         {% end_dnd_module %}
         {% end_dnd_row %}
-        {% dnd_row padding={
-        'default': {
-          'top': 0,
-          'right': 0,
-          'bottom': -400,
-          'left': 0
-        },
-        'mobile': {
-          'top': 0,
-          'right': 0,
-          'bottom': -400,
-          'left': 0
-        }
-      }%}
+        {% dnd_row %}
       {% dnd_module path='../modules/bucket-grid.module' %}
       {% end_dnd_module %}
             {% end_dnd_row %}
