--- a/sections/overlapping-split-grid.html
+++ b/sections/overlapping-split-grid.html
@@ -21,20 +21,7 @@ max_width={{ context.max_width || 1200 }},
             %}
             {% end_dnd_module %}
             {% end_dnd_row %}
-        {% dnd_row padding={
-        'default': {
-          'top': 20,
-          'right': 20,
-          'bottom': 200,
-          'left': 20
-        },
-        'mobile': {
-          'top': 20,
-          'right': 20,
-          'bottom': 200,
-          'left': 20
-        }
-      } %}
+        {% dnd_row  %}
         {% dnd_module path='../modules/vertical-bar.module' %}
         {% end_dnd_module %}
         {% end_dnd_row %}
