fix(images): add section screenshots

--- a/sections/overlapping-split-grid.html
+++ b/sections/overlapping-split-grid.html
@@ -1,6 +1,6 @@
 <!--
   templateType: section
-  label: Overlapping Slpit Grid
+  label: Overlapping Split Grid
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/overlapping-split-grid.png
   description: "Two column layout. Left colum overlaps with right column"
