--- a/sections/two-column-content.html
+++ b/sections/two-column-content.html
@@ -1,8 +1,8 @@
 <!--
   templateType: section
-  label: Multi-row content
+  label: Two-column Content
   isAvailableForNewContent: true
-  screenshotPath: ../images/section-previews/two-row-content.png
+  screenshotPath: ../images/section-previews/two-column-content.png
   description: "Two column layout. Each column has a rich text area."
 -->
 {% dnd_section
