--- a/sections/home-hero.html
+++ b/sections/home-hero.html
@@ -1,6 +1,6 @@
 <!--
   templateType: section
-  label: Call to action
+  label: Homepage Hero
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/home-hero.png
   description: "Full size background image section with left aligned heading."
