--- a/sections/multi-column-content.html
+++ b/sections/multi-column-content.html
@@ -1,6 +1,6 @@
 <!--
   templateType: section
-  label: Multi-column content
+  label: Multi-column Content
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/multi-column-content.png
   description: "Full-width three column layout with a heading."
