fix(modules): label updates

--- a/sections/call-to-action.html
+++ b/sections/call-to-action.html
@@ -1,6 +1,6 @@
 <!--
   templateType: section
-  label: Call to action
+  label: Call to Action
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/call-to-action.png
   description: "Full-width three column layout."
