refactor: formatting only

--- a/sections/call-to-action.html
+++ b/sections/call-to-action.html
@@ -5,36 +5,9 @@
   screenshotPath: ../images/section-previews/call-to-action.png
   description: "Full-width three column layout."
 -->
-{% dnd_section  class='call-to-action' padding={
-'default': {
-  'top': 0,
-  'right': 0,
-  'bottom': 0,
-  'left': 0
-},
-'mobile': {
-  'top': 0,
-  'right': 0,
-  'bottom': 0,
-  'left': 0
-}
-} 
-%}
-  {% dnd_column padding={
-  'default': {
-    'top': 0,
-    'right': 0,
-    'bottom': 0,
-    'left': 0
-  },
-  'mobile': {
-    'top': 0,
-    'right': 0,
-    'bottom': 0,
-    'left': 0
-  }
-  } %}
-    {% dnd_row  padding={
+{% dnd_section  
+  class='call-to-action' 
+  padding={
     'default': {
       'top': 0,
       'right': 0,
@@ -47,7 +20,40 @@
       'bottom': 0,
       'left': 0
     }
-    } %}
+  } 
+%}
+  {% dnd_column 
+    padding={
+      'default': {
+        'top': 0,
+        'right': 0,
+        'bottom': 0,
+        'left': 0
+      },
+      'mobile': {
+        'top': 0,
+        'right': 0,
+        'bottom': 0,
+        'left': 0
+      }
+    } 
+  %}
+    {% dnd_row  
+      padding={
+        'default': {
+          'top': 0,
+          'right': 0,
+          'bottom': 0,
+          'left': 0
+        },
+        'mobile': {
+          'top': 0,
+          'right': 0,
+          'bottom': 0,
+          'left': 0
+        }
+      } 
+    %}
       {% dnd_module path='../modules/three-column-grid.module' %}
       {% end_dnd_module %}
     {% end_dnd_row %}
