--- a/sections/donate.html
+++ b/sections/donate.html
@@ -6,28 +6,28 @@
   description: "Full-width layout with headline, text, and donation buttons."
 -->
 {% dnd_section 
-vertical_alignment='MIDDLE',
-background_image={
-  'backgroundPosition': 'BOTTOM_CENTER',
-  'backgroundSize': 'cover',
-  'imageUrl': context.background_image || get_asset_url('../images/anton-sharov-_kkx1WekVRY-unsplash.jpg')
-},
-max_width={{ context.max_width || 1000 }} %}
-      
-        {% dnd_column
-        offset=0,
-        width=12
-        %}
-        {% dnd_row max_width={{ context.max_width || 1000 }}%}
-            {% dnd_module
-                path='@hubspot/rich_text',
-                html={{ context.column_one_content || '<div style="text-align: center;"><h1>Help us protect our land</h1><p>Every acre we protect and every river mile we restore begins with you. Your support helps us take on the dual threats of climate change and biodiversity loss across 70+ countries and territories.</p></div>' }}
-            %}
-            {% end_dnd_module %}
-            {% end_dnd_row %}
-        {% dnd_row max_width={{ context.max_width || 1000 }}%}
+  vertical_alignment='MIDDLE',
+  background_image={
+    'backgroundPosition': 'BOTTOM_CENTER',
+    'backgroundSize': 'cover',
+    'imageUrl': context.background_image || get_asset_url('../images/anton-sharov-_kkx1WekVRY-unsplash.jpg')
+  },
+  max_width={{ context.max_width || 1000 }} 
+%}
+  {% dnd_column
+    offset=0,
+    width=12
+  %}
+    {% dnd_row max_width={{ context.max_width || 1000 }}%}
+      {% dnd_module
+          path='@hubspot/rich_text',
+          html={{ context.column_one_content || '<div style="text-align: center;"><h1>Help us protect our land</h1><p>Every acre we protect and every river mile we restore begins with you. Your support helps us take on the dual threats of climate change and biodiversity loss across 70+ countries and territories.</p></div>' }}
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row max_width={{ context.max_width || 1000 }}%}
       {% dnd_module path='../modules/action-center.module' %}
       {% end_dnd_module %}
-            {% end_dnd_row %}
-        {% end_dnd_column %}
+    {% end_dnd_row %}
+  {% end_dnd_column %}
 {% end_dnd_section %}
