--- a/sections/our-partners.html
+++ b/sections/our-partners.html
@@ -6,27 +6,27 @@
   description: "Full-width layout with headline, text, and logos."
 -->
 {% dnd_section 
-vertical_alignment='MIDDLE',
-max_width={{ context.max_width || 1200 }} %}
-      
-        {% dnd_column
-        offset=0,
-        width=12
-        %}
-        {% dnd_row %}
-            {% dnd_module
-                path='@hubspot/rich_text',
-                html={{ context.column_one_content || '<div style="text-align: center;"><h1>Our Partners + Sponsors</h1><p>We are proud partners of over 30 organizations worldwide that help fight climate change.</p></div>' }}
-            %}
-            {% end_dnd_module %}
-            {% end_dnd_row %}
-            {% dnd_row %}
-                {% dnd_module path='../modules/vertical-bar.module' %}
-                {% end_dnd_module %}
-                      {% end_dnd_row %}
-        {% dnd_row %}
+  vertical_alignment='MIDDLE',
+  max_width={{ context.max_width || 1200 }} 
+%}
+  {% dnd_column
+    offset=0,
+    width=12
+  %}
+    {% dnd_row %}
+      {% dnd_module
+        path='@hubspot/rich_text',
+        html={{ context.column_one_content || '<div style="text-align: center;"><h1>Our Partners + Sponsors</h1><p>We are proud partners of over 30 organizations worldwide that help fight climate change.</p></div>' }}
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row %}
+      {% dnd_module path='../modules/vertical-bar.module' %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row %}
       {% dnd_module path='../modules/partner-logos.module' %}
       {% end_dnd_module %}
-            {% end_dnd_row %}
-        {% end_dnd_column %}
+    {% end_dnd_row %}
+  {% end_dnd_column %}
 {% end_dnd_section %}
