--- a/sections/home-hero.html
+++ b/sections/home-hero.html
@@ -32,7 +32,18 @@
     {% dnd_row %}
       {% dnd_module
         path='@hubspot/rich_text',
-        html={{ context.content || '<div style="text-align: left; max-width: 900px;"><h1 style="color: #fff;">We protect and advocate for families affected by rising sea levels.</h1><a href="#" style="color: #fff;">Read about our values →</a></div>' }}
+        html={{ context.content || '<div style="text-align: left; max-width: 900px;"><h1 style="color: #fff;">We protect and advocate for families affected by rising sea levels.</h1></div>' }}
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row %}
+      {% dnd_module 
+        path='../modules/link-with-icon.module',
+        class= "home-hero-cta",
+        text_color= {
+          "color": "#ffffff",
+          "opacity": 100 
+        }
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
