fix(sections): update descriptions

--- a/sections/internal-page-hero.html
+++ b/sections/internal-page-hero.html
@@ -3,7 +3,7 @@
   label: Internal Page Hero
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/internal-page-hero.png
-  description: "Full-width background image with rich text."
+  description: "Full-width background image with centered rich text."
 -->
 {% dnd_section  
   class='call-to-action' 
