--- a/sections/multi-column-content.html
+++ b/sections/multi-column-content.html
@@ -3,7 +3,7 @@
   label: Multi-column Content
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/multi-column-content.png
-  description: "Full-width three column layout with a heading."
+  description: "Full-width three column layout with a heading, vertical bar, three buckets, and a background image."
 -->
 {% dnd_section 
   vertical_alignment='TOP',
