--- a/sections/our-partners.html
+++ b/sections/our-partners.html
@@ -3,7 +3,7 @@
   label: Our Partners
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/our-partners.png
-  description: "Full-width layout with headline, text, and logos."
+  description: "Full-width layout with a headline, verticle bar, and logos."
 -->
 {% dnd_section 
   vertical_alignment='MIDDLE',
