--- a/sections/overlapping-split-grid.html
+++ b/sections/overlapping-split-grid.html
@@ -3,7 +3,7 @@
   label: Overlapping Split Grid
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/overlapping-split-grid.png
-  description: "Two column layout. Left colum overlaps with right column"
+  description: "Two column layout consisting of content and an image. The left column overlaps with the right column."
 -->
 {% dnd_section 
   vertical_alignment='TOP',
