--- a/modules/three-column-grid.module/module.html
+++ b/modules/three-column-grid.module/module.html
@@ -1,29 +1,3 @@
-<style>
-  .icon_1 svg {
-    fill: {{ module.column_1.text_color.color }};
-    height: 25px;
-    margin-left: 15px;
-    transform: translateY(4px);
-    font-weight: normal;
-  }
-
-  .icon_2 svg {
-    fill: {{ module.column_2.text_color.color }};
-    height: 25px;
-    margin-left: 15px;
-    transform: translateY(4px);
-    font-weight: normal;
-  }
-
-  .icon_3 svg {
-    fill: {{ module.column_3.text_color.color }};
-    height: 25px;
-    margin-left: 15px;
-    transform: translateY(4px);
-    font-weight: normal;
-  }
-</style>
-
 <div class="row">
 
     {% set href = module.column_1.link.url.href %}
@@ -106,7 +80,35 @@
         {% endif %}
       </div>
     </a>
-
 </div>
+
+<style>
+  {% scope_css %}
+    .icon_1 svg {
+      fill: {{ module.column_1.text_color.color }};
+      height: 25px;
+      margin-left: 15px;
+      transform: translateY(4px);
+      font-weight: normal;
+    }
+
+    .icon_2 svg {
+      fill: {{ module.column_2.text_color.color }};
+      height: 25px;
+      margin-left: 15px;
+      transform: translateY(4px);
+      font-weight: normal;
+    }
+
+    .icon_3 svg {
+      fill: {{ module.column_3.text_color.color }};
+      height: 25px;
+      margin-left: 15px;
+      transform: translateY(4px);
+      font-weight: normal;
+    }
+  {% end_scope_css %}
+</style>
+
 
 
