fix(modules): rename headline field in internal page hero

--- a/modules/internal-page-hero.module/module.html
+++ b/modules/internal-page-hero.module/module.html
@@ -1,7 +1,7 @@
 <div class="internal-page-hero">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    {{ module.richtext_field }}
+    {{ module.headline }}
   </div>
 </div>
 
