--- a/sections/three-column-image-grid.html
+++ b/sections/three-column-image-grid.html
@@ -5,70 +5,86 @@
   screenshotPath: ../images/section-previews/three-column-image-grid.png
   description: "A three column image layout."
 -->
-{% dnd_section %}
+{% dnd_section 
+    background_color={
+    r: 245,
+    g: 245,
+    b: 245,
+    a: 1.0
+    },
+    padding={
+    'default': {
+      'top': 0,
+      'right': 60,
+      'bottom': 0,
+      'left': 60
+    },
+    'mobile': {
+      'top': 0,
+      'right': 10,
+      'bottom': 0,
+      'left': 10
+    }
+  },
+  max_width={{ context.max_width || 1000 }}  
+%}
     {% dnd_column %}
       {% dnd_row %}
-        {% dnd_module
-          path='@hubspot/rich_text',
-          html={{ context.column_one_content || '<div style="text-align: center; max-width: 600px; margin: 0 auto;"><h2>Our Mission</h2><br><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>' }}
-        %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-      {% dnd_row %}
-        {% dnd_module path='../modules/vertical-bar.module' %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-      {% dnd_row %}
         {% dnd_module 
-          padding={
-            'default': {
-              'top': 0,
-              'right': 0,
-              'bottom': 100,
-              'left': 0
-            },
-            'mobile': {
-              'top': 0,
-              'right': 0,
-              'bottom': 75,
-              'left': 0
+          path='../modules/image-with-caption.module',
+          image={
+              "src": context.image_1 || "{{ get_asset_url('../images/about/team-member-1.jpg')}}",
             }
-          }
-          path='@hubspot/rich_text',
-          html={{ context.column_one_content || '<div style="text-align: center; max-width: 600px; margin: 0 auto;"><h2>The Team</h2><br><p>Et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>' }}
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>' }},
+          offset=0, 
+          width=4  
+        %}
+        {% end_dnd_module %}
+        {% dnd_module 
+          path='../modules/image-with-caption.module',
+          image={
+            "src": context.image_2 || "{{ get_asset_url('../images/about/team-member-2.jpg')}}",
+           }
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>' }},
+          offset=4, 
+          width=4  %}
+        {% end_dnd_module %}
+        {% dnd_module 
+          path='../modules/image-with-caption.module',
+          image={
+            "src": context.image_3  || "{{ get_asset_url('../images/about/team-member-3.jpg')}}",
+            }
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>' }},
+          offset=8, 
+          width=4  
         %}
         {% end_dnd_module %}
       {% end_dnd_row %}
       {% dnd_row %}
         {% dnd_module 
           path='../modules/image-with-caption.module',
+          image={
+          "src": context.image_4 || "{{ get_asset_url('../images/about/team-member-4.jpg')}}",
+          }
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>' }},
           offset=0, 
           width=4  %}
         {% end_dnd_module %}
         {% dnd_module 
           path='../modules/image-with-caption.module',
+          image={
+          "src": context.image_5  || "{{ get_asset_url('../images/about/team-member-5.jpg')}}",
+          }
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>'}},
           offset=4, 
           width=4  %}
         {% end_dnd_module %}
         {% dnd_module 
           path='../modules/image-with-caption.module',
-          offset=8, 
-          width=4  %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-      {% dnd_row %}
-        {% dnd_module 
-          path='../modules/image-with-caption.module',
-          offset=0, 
-          width=4  %}
-        {% end_dnd_module %}
-        {% dnd_module 
-          path='../modules/image-with-caption.module',
-          offset=4, 
-          width=4  %}
-        {% end_dnd_module %}
-        {% dnd_module 
-          path='../modules/image-with-caption.module',
+          image={
+          "src": context.image_6 || "{{ get_asset_url('../images/about/team-member-6.jpg')}}",
+          }
+          image_caption={{ context.caption || '<p>First Name Last Name<br>Title</p>' }},
           offset=8, 
           width=4  %}
         {% end_dnd_module %}
