fix(sections): update module field name

--- a/sections/internal-page-hero.html
+++ b/sections/internal-page-hero.html
@@ -56,7 +56,7 @@
     %}
       {% dnd_module 
         path='../modules/internal-page-hero.module',
-        richtext_field={{ context.content }},
+        headline={{ context.content }},
 
         style={
         "background":{
