--- a/sections/donate.html
+++ b/sections/donate.html
@@ -25,7 +25,21 @@
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
-    {% dnd_row max_width={{ context.max_width || 1000 }}%}
+    {% dnd_row max_width={{ context.max_width || 1000 }},
+    padding={
+    'default': {
+      'top': 0,
+      'right': 0,
+      'bottom': 0,
+      'left': 0
+    },
+    'mobile': {
+      'top': 0,
+      'right': 0,
+      'bottom': 0,
+      'left': 0
+    }
+  }%}
       {% dnd_module path='../modules/action-center.module' %}
       {% end_dnd_module %}
     {% end_dnd_row %}
