fix(sections): spelling update

--- a/sections/two-column-content.html
+++ b/sections/two-column-content.html
@@ -3,7 +3,7 @@
   label: Two-column Content
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/two-column-content.png
-  description: "Two column layout. Each column has a rich text area."
+  description: "Two-column layout. Each column has a rich text area."
 -->
 {% dnd_section
   vertical_alignment='TOP'
