fix(modules): partner logos

--- a/modules/partner-logos.module/module.html
+++ b/modules/partner-logos.module/module.html
@@ -1,5 +1,5 @@
 <div class="logos">
-  {% for item in module.logo %}
+  {% for item in module.logos.logo %}
     <div class="logo">
       {% if item.src %}
         {% set sizeAttrs = 'width="{{ item.width }}" height="{{ item.height }}"' %}
